# cython-hidapi-stubs

./: README.md  pyproject.toml
hid-stubs/: hid.pyi
