[project]
name = "hidapi-stubs"
version = "0.14.0"
description = "Stubs for cython-hidapi"
authors = [
    {name = "HivertMoZara", email = "worldmozara@163.com"},
]
license = {text = "MIT"}
dependencies = ["hidapi>=0.14.0,<0.15"]
requires-python = ">=3.5"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/NCBM/cython-hidapi-stubs"
Repository = "https://github.com/NCBM/cython-hidapi-stubs"

[tool.setuptools.package-data]
"*" = ["*.pyi"]

[tool.pyright]
pythonVersion = "3.5"
typeCheckingMode = "strict"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
